tags básicas de html.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
 
         <link rel="stylesheet" type="text/css" href="style.css">
 
+        <link rel="shortcut icon" href="/images/task.svg">
+
         <title>To do App</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <header>
+            <div>
+                <h1>TO DO APP</h1>
+                <h2>What's your focus today?</h2>
+            </div>
+
+            <div>
+                <input type="text" id="ipt-task">
+                <input type="submit" value="+" id="btn-add">
+            </div>
+        </header>
+
+        <main>
+            <ul id="ul-todo">
+            </ul>
+        </main>
 
         <script type="text/javascript" src="script.js"></script>
     </body>
