aplicando estilos visuais.

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </head>
     <body>
         <header>
-            <div>
-                <h1>TO DO APP</h1>
+            <div id="div-title">
+                <h1>TO DO LIST</h1>
                 <h2>What's your focus today?</h2>
             </div>
 
-            <div>
+            <div id="div-task-field">
                 <input type="text" id="ipt-task">
                 <input type="submit" value="+" id="btn-add">
             </div>
