--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+        
+        <link rel="stylesheet" type="text/css" href="/styles/style.css">
+
+        <link rel="stylesheet" href="/styles/media.css">
 
         <link rel="shortcut icon" href="/images/task.svg">
 
@@ -19,7 +22,7 @@
             </div>
 
             <div id="div-task-field">
-                <input type="text" id="ipt-task">
+                <input type="text" id="ipt-task" maxlength="80">
                 <input type="submit" value="+" id="btn-add">
             </div>
         </header>
