--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         
-        <link rel="stylesheet" type="text/css" href="/styles/style.css">
+        <link rel="stylesheet" type="text/css" href="styles/style.css">
 
-        <link rel="stylesheet" href="/styles/media.css">
+        <link rel="stylesheet" href="styles/media.css">
 
-        <link rel="shortcut icon" href="/images/task.svg">
+        <link rel="shortcut icon" href="images/task.svg">
 
         <title>To do App</title>
     </head>
