--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-    <html>
+<html>
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
         
         <link rel="stylesheet" type="text/css" href="styles/style.css">
 
@@ -12,7 +11,7 @@
 
         <link rel="shortcut icon" href="images/task.svg">
 
-        <title>To do App</title>
+        <title>To Do App</title>
     </head>
     <body>
         <header>
