--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
 
             <div id="div-task-field">
-                <input type="text" id="ipt-task" maxlength="80">
+                <input type="text" id="ipt-task" maxlength="80" placeholder="Enter a task...">
                 <input type="submit" value="+" id="btn-add">
             </div>
         </header>
